# AdventOfCode2020

./: .gitignore  CMakeLists.txt  README.md
solutions/: CMakeLists.txt
solutions/day_1/: CMakeLists.txt  day_1.cpp
solutions/day_2/: CMakeLists.txt  day_2.cpp
solutions/day_3/: CMakeLists.txt  day_3.cpp
solutions/day_4/: CMakeLists.txt  day_4.cpp
solutions/day_5/: CMakeLists.txt  day_5.cpp
solutions/day_6/: CMakeLists.txt  day_6.cpp
solutions/day_7/: CMakeLists.txt  day_7.cpp
solutions/day_8/: CMakeLists.txt  day_8.cpp
solutions/day_9/: CMakeLists.txt  day_9.cpp
utility/: file_reader.hpp  result_printer.hpp  utility.hpp
